--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,36 @@ code {
   top: 0;
   z-index: 10;
 }
+
+.tblactiverow {
+  background-color: #0dcaf0;
+  cursor: pointer;
+  color: white;
+  padding: 5px;
+  box-shadow: 5px 5px #888888;
+  font-weight: 600;
+}
+
+.table> tbody > tr:hover {
+  background-color: #0dcaf0;
+  cursor: pointer;
+  color: white;
+  padding: 5px;
+  box-shadow: 5px 5px #888888;
+}
+
+.react-loading-skeleton-td {
+  --base-color: #ebebeb;
+  --highlight-color: #f5f5f5;
+  --animation-duration: 1.5s;
+  --animation-direction: normal;
+  --pseudo-element-display: block;
+  background-color: var(--base-color);
+  width: 100%;
+  border-radius: 0.25rem;
+  display: inline-flex;
+  line-height: 1;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
