--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,24 @@ code {
 }
 
 .draggablelist {}
+
+
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #eee; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #047e96; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #0dcaf0; 
+}
