zip code search

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.css-13cymwt-control{
+  background-color: #d7d9da !important;
+  border-radius: 0px !important;
+  border:none !important;
+  
+}
