--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.css-13cymwt-control{
+ background-color: #d7d9da !important;
+ border-radius: 0px !important;
+ border:none !important;
+
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
